--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,52 @@ header {
   position: absolute;
   height: 95vh;
   padding: 0 30px;
+  left: -100%;
   transition: all 1s;
 
 }
+
+.sidenav.active {
+
+  left: 0;
+  transition: all 1s;
+
+}
+
+.logo {
+  width: 50px;
+  border-radius: 30px;
+}
+
+ul {
+  padding: 0;
+}
+
+ul li{
+
+  list-style-type: none;
+  margin: 10px 0;
+
+}
+
+ul li a{
+
+  color: #eaecef;
+  text-decoration: none;
+  font-size: 16px;
+  padding: 10px 15px;
+  border-radius: 6px;
+  display: block;
+}
+
+ul li a:hover,
+ul li a.active{
+
+    background: #172b4d;
+
+}
+
+header svg{
+  font-size: 40px;
+}
+
