--- a/src/App.css
+++ b/src/App.css
@@ -72,3 +72,13 @@ header svg{
   font-size: 40px;
 }
 
+.main {
+
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+    color : #000000;
+}
+
